--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,23 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+button.muted::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(145deg);
+  width: 70%;
+  height: 2px;
+  background-color: black;
+}
+
+.side-navbar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 200px; /* Adjust width as needed */
+  background-color: #fff; /* Example background color */
+}
